--- a/build.xml
+++ b/build.xml
@@ -10,7 +10,7 @@
 	</target>
 
 	<target name="compile" depends="init" description="Compile...">
-    		<javac srcdir="${src}" destdir="${build}" />
+    		<javac srcdir="${src}" destdir="${build}" includeantruntime="false"/>
   	</target>
 
 	<target name="dist" depends="compile" description="Move files into a single jar file">
